--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "google-closure-compiler": "^20220601.0.0",
     "html-minifier": "^4.0.0",
     "html-webpack-plugin": "^5.3.2",
+    "prettier": "^3.3.3",
     "roadroller": "^2.1.0",
     "tmp": "^0.2.1",
     "ts-loader": "^9.2.5",
